--- a/css/about.css
+++ b/css/about.css
@@ -41,6 +41,8 @@ main {
   padding-top: 0;
   justify-content: center;
   padding-bottom: 3rem;
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 .about-wrapper {
