--- a/css/footer.css
+++ b/css/footer.css
@@ -1,1 +1,53 @@
+footer {
+  position: relative;
+  width: 100%;
+  height: 7rem;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
 
+.logos {
+  display: flex;
+  justify-items: center;
+  justify-content: space-between;
+  align-items: baseline;
+  margin: 1rem;
+}
+
+.yrgo-img {
+  width: 240px;
+  height: 60px;
+}
+
+.logo-img {
+  width: 407px;
+  height: 91px;
+}
+
+@media only screen and (max-width: 480px) {
+  .logos {
+    display: flex;
+    justify-items: center;
+    justify-content: space-between;
+    align-items: center;
+    margin: 1rem;
+    flex-direction: column;
+    align-content: center;
+  }
+
+  .yrgo-img {
+    width: 180px;
+    height: 45px;
+  }
+
+  .logo-img {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    width: 300px;
+    height: 60px;
+  }
+}
+
+@media only screen and (max-width: 780px) {
+}
