--- a/css/about.css
+++ b/css/about.css
@@ -14,20 +14,24 @@ h1 {
   font-size: 40px;
   margin-top: 2rem;
   margin-bottom: 1rem;
+  color: var(--font-color);
 }
 
 h2 {
   font-family: "AlegreyaSans";
   font-size: 27px;
+  color: var(--font-color);
 }
 
 h3 {
   font-family: "AlegreyaSans";
   font-size: 20px;
+  color: var(--font-color);
 }
 
 p {
   font-family: "AlegreyaSans";
+  color: var(--font-color);
 }
 
 main {
@@ -35,14 +39,20 @@ main {
   flex-direction: column;
   align-items: center;
 }
+
 .project-wrapper {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   padding-top: 0;
   justify-content: center;
+  justify-items: center;
   padding-bottom: 3rem;
   margin-left: 15%;
   margin-right: 15%;
+}
+
+.about-text {
+  border-bottom: 0.15rem solid var(--primary-color);
 }
 
 .about-wrapper {
