--- a/css/style.css
+++ b/css/style.css
@@ -16,14 +16,31 @@
   padding: 0;
 }
 
-button {
-  width: 10rem;
-  height: 4rem;
-  font-size: 2rem;
-  color: white;
-  background-color: #99ac2d;
+.mobile-game-container {
+  display: none;
 }
 
-h3 {
-  font-family: "AlegreyaSans";
+@media only screen and (max-width: 480px) {
+  .game-container {
+    display: none;
+  }
+
+  .mobile-game-container {
+    font-family: "AlegreyaSans";
+    display: block;
+    height: 10rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #e1e6b5;
+    border-radius: 15px 50px 30px;
+    padding: 3rem;
+    margin: 3rem;
+    margin-top: 5rem;
+    text-align: center;
+  }
+
+  .about-link {
+    text-decoration: none;
+  }
 }
