--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@
 
   .mobile-game-container {
     font-family: "AlegreyaSans";
+    font-size: 1rem;
+    color: var(--font-color);
     display: block;
     height: 10rem;
     display: flex;
@@ -42,5 +44,10 @@
 
   .about-link {
     text-decoration: none;
+    color: var(--primary-color);
+  }
+
+  .about-link:hover {
+    color: black;
   }
 }
