--- a/css/footer.css
+++ b/css/footer.css
@@ -24,10 +24,10 @@ footer {
   width: 340px;
   height: 78px;
 }
-
+/* 
 .footer-container {
   overflow: hidden;
-}
+} */
 
 @media only screen and (max-width: 480px) {
   .logos {
